# mpaia

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cicd.yml  publish-to-pypi.yml
src/mpaia/: __init__.py  assistant.py  bot.py  jobs.py  telegram_bot.py
